<resources>
    <string name="app_name">GithubUserApp-PutuSub2Dicoding</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_not_found">Name Not Found</string>
    <string name="nama">Nama</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="angka">0</string>
    <string name="repositories">Repositories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="input_github_username">Input Github User...</string>
    <string name="type">Type</string>
    <string name="search_username">Search User</string>
    <string name="company">company</string>
</resources>